fixing font size at different screen widths and hiding content advisory on small screen

--- a/src/styl/story.styl
+++ b/src/styl/story.styl
@@ -72,24 +72,7 @@ article.story {
       }
 
       a.content_advisory {
-        display: inline-block;
-        background: black;
-        color: white;
-        font-size: 12px;
-        padding-right: 4px;
-        line-height: 20px;
-        font-weight: bold;
-
-        &:before {
-          content: '!'
-          background: blue;
-          width: 20px;
-          display: inline-block;
-          color: white;
-          text-align: center;
-          margin-right: 4px;
-          font-weight: bold;
-        }
+        display:none;
       }
     }
 
@@ -117,8 +100,31 @@ article.story {
       .media {
         flex: 0 100%;
 
-        address, span {
-          font-size: 14px;
+        ul {
+          li {
+            font-size: 14px;
+          }
+        }
+
+        a.content_advisory {
+          display: inline-block;
+          background: black;
+          color: white;
+          font-size: 12px;
+          padding-right: 4px;
+          line-height: 20px;
+          font-weight: bold;
+
+          &:before {
+            content: '!'
+            background: blue;
+            width: 20px;
+            display: inline-block;
+            color: white;
+            text-align: center;
+            margin-right: 4px;
+            font-weight: bold;
+          }
         }
       }
 
